--- a/wiki/MultipleVersions.wiki
+++ b/wiki/MultipleVersions.wiki
@@ -12,9 +12,9 @@ This works because the first plugin that requests a specific MIME type *and* is 
 Install the different plugins into different location, for example:
 
 {{{
-/Library/Third Party Plug-Ins/Java1.0plugin
-/Library/Third Party Plug-Ins/Java2.0plugin
-/Library/Third Party Plug-Ins/Java3.0plugin
+/Library/Third Party Plug-Ins/Java1.0.plugin
+/Library/Third Party Plug-Ins/Java2.0.plugin
+/Library/Third Party Plug-Ins/Java3.0.plugin
 }}}
 
 (Or on Linux, `/usr/lib/plugins/*`)
@@ -29,12 +29,12 @@ Now you can whitelist which sites are allowed to use each.
 
     [Java Version 1.3]
     FriendlyWarning=
-    LoadPlugin=/Library/Third Party Plug-Ins/Java1.0.plugin
+    LoadPlugin=/Library/Third Party Plug-Ins/Java2.0.plugin
     AllowDomains=legal.corp.megacorp.com
 
     [Java Version 1.3]
     FriendlyWarning=No Java Plugin allowed on this Domain.
-    LoadPlugin=/Library/Third Party Plug-Ins/Java1.0.plugin
+    LoadPlugin=/Library/Third Party Plug-Ins/Java3.0.plugin
     AllowDomains=marketing.corp.megacorp.com
 }}}
 
