Edited wiki page MultipleVersions through web user interface.

--- a/wiki/MultipleVersions.wiki
+++ b/wiki/MultipleVersions.wiki
@@ -1,5 +1,5 @@
 #summary Allowing multiple plugin versions (e.g. Java) to co-exist
-#labels Phase-Deploy,Featured
+#labels Phase-Deploy
 
 = Introduction =
 
