Edited wiki page FrequentlyAskedQuestions through web user interface.

--- a/wiki/FrequentlyAskedQuestions.wiki
+++ b/wiki/FrequentlyAskedQuestions.wiki
@@ -3,5 +3,5 @@
 
 = Troubleshooting =
 
-  * Q: The plugin does not reflect recent changes to the configuration file.
-  * A: Try removing `~/Library/Preferences/com.google.netscapesecurity.plist`, a stale cached plist might remain.
+  * Q: On Mac, the plugin does not reflect recent changes to the configuration file.
+  * A: Try removing `~/Library/Preferences/com.google.netscapesecurity.plist`, a stale cached plist might remain. Alternatively, touch the Info.plist file from the plugin bundle.
