Edited wiki page FrequentlyAskedQuestions through web user interface.

--- a/wiki/FrequentlyAskedQuestions.wiki
+++ b/wiki/FrequentlyAskedQuestions.wiki
@@ -1,4 +1,4 @@
-#summary Netscape Security Wrapper FAQ
+#summary Netscape Security Wrapper FAQ and Troubleshooting.
 #labels Phase-Deploy
 
 = Troubleshooting =
