--- a/wiki/NetscapeSecurity.wiki
+++ b/wiki/NetscapeSecurity.wiki
@@ -71,6 +71,25 @@ Currently supported directives are as follows:
     PluginDescription       Description displayed by the browser when a user
                             looks at about:plugins (Linux Only, Apple use the
                             Contents of Info.plist)
+    NotifyCommand           Execute this command when a plugin does not match
+                            any AllowedDomains. This is intended to display a
+                            notification to the user, or give them instructions
+                            to contact support.
+ 
+                            This string is passed directly to system(), and
+                            will block. Use & to background the task if
+                            necessary.
+ 
+    SyslogPolicyDecisions   Log policy decisions to syslog. This is intended to
+                            help debug new policies, by allowing administrators
+                            to collect statistics on the most commonly used
+                            domains.
+ 
+                            It can be used to gradually roll out new policies
+                            by setting AllowedDomains=*, and then collecting
+                            the most common users before restricting it (only
+                            recommended for debugging policies).
+
 }}}
 
 There should be one `[Global]` section, containing default options, followed by
